# src/resources/receipts/receipts.service.ts
@@ -4,10 +4,9 @@ import { ReceiptUrlDTO } from './dto/receipt-url.dto';
 import { ScrapeMe } from '../scraper/helpers';
 import { AssistantService } from '../assistant/assistant.service';
 import { Supabase } from '../supabase';
-import {
-  ReceiptItemInsert,
-  ReceiptVarDetailsInsert,
-} from '../../types/receipts';
+import { ReceiptItemInsert } from '../../types/receipts';
+import { PaginationQueryDto } from '../../models/paginatio-query.dto';
+import { ReceiptDTO } from './dto/receipt.dto';
 
 @Injectable()
 export class ReceiptsService {
@@ -18,16 +17,14 @@ export class ReceiptsService {
   ) {}
 
   async create(createReceiptDto: ReceiptUrlDTO) {
-    const { data: existingReceipt, error: selectError } = await this.supabase
+    const { data: existingReceipt } = await this.supabase
       .getClient()
       .from('receipts')
       .select('receipt_id')
       .eq('receipt_id', createReceiptDto.url)
       .single();
 
-    if (selectError) {
-      throw new Error(`Failed to select receipt: ${selectError.message}`);
-    } else if (existingReceipt) {
+    if (existingReceipt) {
       throw new Error('Receipt already exists');
     }
 
@@ -45,13 +42,12 @@ export class ReceiptsService {
           fiscal_code: receipt.fiscalCode,
           address: receipt.address,
           registration_number: receipt.registrationNumber,
-          total_amount: receipt.total.amount,
-          payment_method: receipt.total.paymentMethod,
-          date: receipt.transactionDetails.date,
-          time: receipt.transactionDetails.time,
           fiscal_receipt_number: receipt.transactionDetails.fiscalReceiptNumber,
           manufacturing_number: receipt.transactionDetails.manufacturingNumber,
           receipt_id: createReceiptDto.url,
+          purchased_at: receipt.transactionDetails.purchasedAt,
+          payment_method: receipt.paymentMethod,
+          total_amount: receipt.totalAmount,
         },
       ]);
 
@@ -65,6 +61,8 @@ export class ReceiptsService {
       quantity: item.quantity,
       unit_price: item.unitPrice,
       amount: item.amount,
+      vat_amount: item.vatAmount,
+      vat_percentage: item.vatPercentage,
     }));
 
     const { error: itemsError } = await this.supabase
@@ -76,28 +74,57 @@ export class ReceiptsService {
       throw new Error(`Failed to insert receipt items: ${itemsError.message}`);
     }
 
-    const vatDetails: ReceiptVarDetailsInsert[] = receipt.total.vat.map(
-      (vatDetail) => ({
-        receipt_id: createReceiptDto.url, // Use inserted receipt ID
-        vat_percentage: vatDetail.percentage,
-        vat_amount: vatDetail.amount,
-      }),
-    );
-
-    const { error: vatError } = await this.supabase
-      .getClient()
-      .from('vat_details')
-      .insert(vatDetails);
-
-    if (vatError) {
-      throw new Error(`Failed to insert VAT details: ${vatError.message}`);
-    }
-
-    return receipt;
+    return {
+      ...receipt,
+      receiptId: createReceiptDto.url,
+    };
   }
 
-  async findAll() {
-    return `This action returns all receipts`;
+  async findAll(paginationQuery: PaginationQueryDto): Promise<ReceiptDTO[]> {
+    const { page, limit } = paginationQuery;
+
+    const { data, error } = await this.supabase
+      .getClient()
+      .from('receipts')
+      .select(
+        `
+    *,
+    receipt_items (
+      description, quantity, unit_price, amount, vat_percentage, vat_amount
+    )
+  `,
+      )
+      .range(page, limit);
+
+    if (error) {
+      throw new Error(`We failed to fetch your receipts. Sorry...`);
+    }
+
+    return data.map(
+      (receipt) =>
+        ({
+          companyName: receipt.company_name,
+          fiscalCode: receipt.fiscal_code,
+          address: receipt.address,
+          registrationNumber: receipt.registration_number,
+          receiptId: receipt.receipt_id,
+          transactionDetails: {
+            purchasedAt: receipt.purchased_at,
+            fiscalReceiptNumber: receipt.fiscal_receipt_number,
+            manufacturingNumber: receipt.manufacturing_number,
+          },
+          totalAmount: receipt.total_amount,
+          paymentMethod: receipt.payment_method,
+          items: receipt.receipt_items.map((item) => ({
+            description: item.description,
+            quantity: item.quantity,
+            unitPrice: item.unit_price,
+            amount: item.amount,
+            vatAmount: item.vat_amount,
+            vatPercentage: item.vat_percentage,
+          })),
+        }) as ReceiptDTO,
+    );
   }
 
   findOne(id: number) {
